<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="type_image">Image</string>
    <string name="type_video">Video</string>
    <string name="close_action">Close</string>
    <string name="preview_action">Preview</string>
    <string name="view_image_action">View image</string>
    <string name="play_video_action">Play video</string>
    <string name="save_action">Save</string>
    <string name="share_action">Share</string>
    <string name="share_with">Share with…</string>
    <string name="share_app">Share app</string>
    <string name="app_share">I invite you to try this interesting app: Status Saver. Download it here: %s</string>
    <string name="open_action">Open</string>
    <string name="more_label">More</string>
    <string name="home_label">Statuses</string>
    <string name="saved_label">Saved</string>
    <string name="tools_label">Tools</string>
    <string name="loading">Loading</string>
    <string name="please_wait_a_second">Please, wait a second…</string>
    <string name="could_not_load_statuses">Couldn\'t load statuses</string>
    <string name="no_statuses_title">No statuses</string>
    <string name="save_some_statuses">Save some statuses</string>
    <string name="open_wa_action">Open WA</string>
    <string name="could_not_open_wa">Could not open WA</string>
    <string name="saving_status">Saving status…</string>
    <string name="failed_to_save">Failed to save.</string>
    <string name="saved_successfully">Saved successfully.</string>
    <string name="saved_x_statuses">Saved %d statuses</string>
    <string name="save_again_title">Save again?</string>
    <string name="you_saved_this_status_previously">You saved this status before. Do you want to save it again?</string>
    <string name="status_unsaved">Unsaved</string>
    <string name="status_saved">Saved</string>
    <string name="action_select_all">Select all</string>
    <string name="x_selected">%d selected</string>
    <string name="x_is_the_default_client_now">%s is the default client now.</string>
    <string name="default_client_cleared">Default client cleared.</string>
    <string name="client_info"><![CDATA[Version <b>%s</b>]]></string>
    <string name="client_info_unknown">Unable to load client info.</string>
    <string name="saf_tutorial"><![CDATA[On the next screen, make sure to select the location \"<b>%s</b>\". Once done, press the \"Use this folder\" button at the bottom to confirm.]]></string>
    <string name="installed_clients_empty">There are not installed WA clients.</string>
    <string name="you_should_open_wa_and_download_some_statuses">You should go to WA and download some statuses</string>
    <string name="there_may_be_no_saved_files">There may be no saved files</string>
    <string name="wa_is_not_installed_title">WA isn\'t installed</string>
    <string name="this_application_will_not_work">This application won\'t work</string>
    <string name="launch_x_client">Launch %s</string>
    <string name="delete_action">Delete</string>
    <string name="delete_saved_status_title">Delete saved status</string>
    <string name="delete_saved_statuses_title">Delete saved statuses</string>
    <string name="this_saved_status_will_be_permanently_deleted">This saved status will be permanently deleted.</string>
    <string name="x_saved_statuses_will_be_permanently_deleted">%d saved statuses will be permanently deleted.</string>
    <string name="statuses_deletion_is_not_permitted">Take into account that can delete only saved statuses</string>
    <string name="deleting_please_wait">Deleting, please wait…</string>
    <string name="deletion_success">Deletion success.</string>
    <string name="deletion_failed">Deletion failed.</string>
    <string name="permissions_denied_title">Permissions denied</string>
    <string name="permissions_denied_message">You must grant required permissions. This application won\'t work correctly without these permissions.</string>
    <string name="grant_action">Grant</string>
    <string name="open_settings_action">Open settings</string>
    <string name="there_is_not_an_app_available_to_open_this_video">There is not an app available to open this video</string>
    <string name="there_is_not_an_app_available_to_open_this_image">There is not an app available to open this image</string>
    <string name="play_store_is_not_installed">Play Store isn\'t installed.</string>
    <string name="action_settings">Settings</string>
    <string name="settings_interface">Interface</string>
    <string name="settings_statuses">Statuses</string>
    <string name="settings_other">Other</string>
    <string name="advanced">Advanced</string>
    <string name="night_mode_title">Night mode</string>
    <string name="night_mode_yes">Yes</string>
    <string name="night_mode_no">No</string>
    <string name="night_mode_auto">Auto.</string>
    <string name="just_black_theme_title">Just Black</string>
    <string name="statuses_location_title">Statuses location</string>
    <string name="statuses_location_summary">Location where statuses should be found. You should change this setting only if the app is unable to load statuses from the default location.</string>
    <string name="statuses_location_device">Device</string>
    <string name="statuses_location_sd_card">SD Card</string>
    <string name="statuses_location_default">Default location</string>
    <string name="no_storage_device_found">No storage device found</string>
    <string name="exclude_old_statuses_title">Exclude old statuses</string>
    <string name="exclude_old_statuses_summary">If you\'re viewing old statuses in this application.</string>
    <string name="exclude_saved_statuses_title">Exclude saved statuses</string>
    <string name="exclude_saved_statuses_summary">If enabled, saved statuses won\'t appear in the main page. Them will be accessible only from the \"Saved\" page.</string>
    <string name="multi_selection_title">Multi-selection</string>
    <string name="long_press_action_title">Long press action</string>
    <string name="whatsapp_icon_title">Small WA icon</string>
    <string name="whatsapp_icon_summary">Display a small icon bellow each status to identify from which client it was obtained.</string>
    <string name="quick_deletion_title">Quick deletion</string>
    <string name="quick_deletion_summary">Allows the deletion of saved statuses without displaying a confirmation window. Not recommended.</string>
    <string name="review_permissions_title">Review permissions</string>
    <string name="review_permissions_summary">Grant or remove permissions for installed WA clients.</string>
    <string name="default_client_title">Default client</string>
    <string name="default_client_summary">If you have multiple WA clients installed, you can select the one from which to load statuses.</string>
    <string name="analytics_enabled_title">Send usage statistics</string>
    <string name="analytics_enabled_summary">When this is enabled, WhatSave may send anonymous usage statistics that help us understand how users use the app.</string>
    <string name="about_label">About</string>
    <string name="version_x">Version %s</string>
    <string name="author_title">Author</string>
    <string name="contact_title">Contact</string>
    <string name="contact_summary">If you need help or support.</string>
    <string name="fork_on_github_title">Fork on GitHub</string>
    <string name="fork_on_github_summary">View, fork or download app sources.</string>
    <string name="legal_notices">Legal notices</string>
    <string name="message_view_is_disabled">Message view is disabled</string>
    <string name="you_wont_be_able_to_see_messages_here">You won\'t be able to see deleted or received WA messages here.</string>
    <string name="message_view">Message view</string>
    <string name="received_messages_listener">Received messages listener</string>
    <string name="confirm_device_credentials">You must confirm your credentials before using this tool.</string>
    <string name="conversations_title">Conversations</string>
    <string name="messages_from_x">Messages from %s</string>
    <string name="message_view_description">Read deleted or received messages without your contacts knowing.</string>
    <string name="message_view_term_1">This function reads the content of WA notifications to save received messages.</string>
    <string name="message_view_term_2">Therefore, permission to access notifications is required for this to function properly.</string>
    <string name="message_view_term_3">Only WA notifications will be processed. The messages are saved only on this device.</string>
    <string name="message_view_term_4">The messages that your contacts send and delete while you are offline are not saved by WhatSave because your phone won\'t receive a WA notification.</string>
    <string name="message_view_term_5">Remember that WhatSave is an open-source app, so you can always review its internal workings to ensure your privacy is not compromised.</string>
    <string name="use_message_view">Use Message view</string>
    <string name="disable_message_view_title">Disable Message view</string>
    <string name="disable_message_view_confirmation">When you deactivate Message view, all saved messages here will be deleted. Are you sure?</string>
    <string name="delete_conversation_title">Delete conversation</string>
    <string name="delete_conversation_confirmation">This will delete all messages from this conversation.</string>
    <string name="delete_message_title">Delete message</string>
    <string name="delete_message_confirmation">Do you want to delete this message?</string>
    <string name="blacklist_sender">Don\'t save messages from this sender</string>
    <string name="blacklisted_senders">Blacklisted senders</string>
    <string name="no_blacklisted_senders">Here will be shown the people from whom you do not what their messages to be saved.</string>
    <string name="remove_x_from_the_blacklist"><![CDATA[Do you want to remove <b>%s</b> from this blacklist?]]></string>
    <string name="no_conversations">There are no conversations to display</string>
    <string name="empty">Empty</string>
    <string name="yes_action">Yes</string>
    <string name="no_action">No</string>
    <string name="clear_messages">Clear messages</string>
    <string name="accept_and_continue">Accept and continue</string>
    <string name="msg_a_number">Message a number</string>
    <string name="msg_a_number_description">Start a conversation with someone who is not on your contact list, using their phone number.</string>
    <string name="phone_number_invalid">Entered phone number is not valid</string>
    <string name="phone_number_label">Phone number</string>
    <string name="message_label">Message</string>
    <string name="send_action">Send</string>
    <string name="select_a_country_title">Select a country</string>
    <string name="system_default">System default</string>
    <string name="language_name">Language</string>
    <string name="auto_update_title">Auto. update search</string>
    <string name="every_day">Every day</string>
    <string name="weekly">Weekly</string>
    <string name="every_fifteen_days">Every fifteen days</string>
    <string name="monthly">Monthly</string>
    <string name="never">Never</string>
    <string name="storage_permission_label">You must grant the following required permissions before continuing:</string>
    <string name="storage_access_title">Storage access</string>
    <string name="storage_access_description">The storage access permission is essential for loading and saving statuses.</string>
    <string name="continue_action">Continue</string>
    <string name="grant_permissions">Grant permissions</string>
    <string name="privacy_and_terms">Privacy and terms</string>
    <string name="privacy_notice">By pressing \"Continue\", we will assume that you have read and accepted our Privacy Policy and Terms of Use.</string>
</resources>