<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:transitionGroup="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            style="?collapsingToolbarLayoutLargeStyle"
            android:layout_width="match_parent"
            android:layout_height="?collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/tools_label"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.savestatus.wsstatussaver.views.ToolView
                android:id="@+id/msg_a_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:toolIcon="@drawable/ic_round_message_24dp"
                app:toolName="@string/msg_a_number"
                app:toolDescription="@string/msg_a_number_description"/>

            <com.savestatus.wsstatussaver.views.ToolView
                android:id="@+id/message_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:toolIcon="@drawable/ic_subject_24dp"
                app:toolName="@string/message_view"
                app:toolDescription="@string/message_view_description"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>