<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="16dp"
    android:paddingStart="@dimen/onboard_titles_horizontal_padding"
    android:paddingEnd="@dimen/onboard_titles_horizontal_padding"
    android:clipToPadding="false"
    android:orientation="vertical">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:textAppearance="?textAppearanceHeadline6"
        android:text="@string/storage_access_title"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/permDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ellipsize="end"
        android:textAppearance="?textAppearanceSubtitle2"
        android:textColor="?android:textColorSecondary"
        android:text="@string/storage_access_description"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/grantButton"
        style="@style/Widget.Material3.Button.OutlinedButton.Icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/grant_permissions"
        app:icon="@drawable/ic_storage_24dp"/>

</LinearLayout>