<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/privacyPolicyButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/onboard_titles_vertical_padding"
                android:paddingStart="@dimen/onboard_titles_horizontal_padding"
                android:paddingEnd="@dimen/onboard_titles_horizontal_padding"
                android:textAppearance="?textAppearanceHeadline4"
                android:textColor="?android:textColorSecondary"
                android:text="@string/grant_permissions"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingStart="@dimen/onboard_titles_horizontal_padding"
                android:paddingEnd="@dimen/onboard_titles_horizontal_padding"
                android:ellipsize="end"
                android:textAppearance="?textAppearanceSubtitle2"
                android:textColor="?android:textColorSecondary"
                android:text="@string/storage_permission_label"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="?attr/dividerHorizontal"/>

            <include
                android:id="@+id/storagePermissionView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/storage_permission_view"/>

            <include
                android:id="@+id/clientPermissionView"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                layout="@layout/client_permission_view"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacyPolicyButton"
        style="?materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/privacy_and_terms"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/agreementText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/continueButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="?colorOnPrimary"
        android:text="@string/continue_action"
        app:layout_constraintBottom_toTopOf="@+id/agreementText"
        app:layout_constraintStart_toEndOf="@+id/privacyPolicyButton"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/agreementText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:paddingStart="@dimen/onboard_titles_horizontal_padding"
        android:paddingEnd="@dimen/onboard_titles_horizontal_padding"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        android:textAppearance="?textAppearanceCaption"
        android:text="@string/privacy_notice"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>